--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-register></app-register>
+<!-- <app-register></app-register> -->
+<!-- <app-login></app-login> -->
+<app-forget-password></app-forget-password>
