--- a/src/app/components/forget-password/forget-password.component.html
+++ b/src/app/components/forget-password/forget-password.component.html
@@ -1,1 +1,25 @@
-<p>forget-password works!</p>
+<div class="main">
+    <div class="column-main">
+        <div class="head">
+            <h1>
+                <span style="color: #4285f4;">F</span>
+                <span style="color: #ea4335;">u</span>
+                <span style="color: #fbbc05;">n</span>
+                <span style="color: #4285f4;">d</span>
+                <span style="color: #34a853;">o</span>
+                <span style="color: #ea4335;">o</span>
+            </h1>
+            <h2>Find your email</h2>
+            <h3>Enter your phone number or recovery email</h3>
+        </div>
+        <div class="email-class">
+            <mat-form-field appearance="outline">
+                <mat-label>Phone number or email</mat-label>
+                <input matInput placeholder="">
+                <mat-error>add valid email</mat-error>
+            </mat-form-field>
+            <div class="below-button">
+                <button class="next-btn" mat-raised-button>Next</button>
+            </div>
+        </div>
+    </div>
