--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,33 @@
-<p>login works!</p>
+<div class="main">
+    <div class="column-main">
+        <div class="head">
+            <h1>
+                <span style="color: #4285f4;">F</span>
+                <span style="color: #ea4335;">u</span>
+                <span style="color: #fbbc05;">n</span>
+                <span style="color: #4285f4;">d</span>
+                <span style="color: #34a853;">o</span>
+                <span style="color: #ea4335;">o</span>
+            </h1>
+            <h1>Sign in</h1>
+            <h3>Use your Google Account</h3>
+        </div>
+        <div class="email-class">
+            <mat-form-field appearance="outline">
+                <mat-label>Email</mat-label>
+                <input matInput placeholder="">
+                <mat-error>add valid email</mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Password</mat-label>
+                <input matInput placeholder="">
+                <mat-error>add valid email</mat-error>
+            </mat-form-field>
+            <h5 class="forgot">Forgot Password?</h5>
+            <h4 class="guest">Not your computer? Use Guest mode to sign in privately.<span> Learn more</span></h4>
+            <div class="below-button">
+                <button class="sign-btn" mat-stroked-button>Create account</button>
+                <button class="next-btn" mat-raised-button>Next</button>
+            </div>
+        </div>
+    </div>
