[Sushree | Added routing and validation to all pages]

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-register></app-register> -->
 <!-- <app-login></app-login> -->
-<app-forget-password></app-forget-password>
+<!-- <app-forget-password></app-forget-password> -->
+<router-outlet></router-outlet>
