--- a/src/app/components/forget-password/forget-password.component.html
+++ b/src/app/components/forget-password/forget-password.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <div class="column-main">
+    <form class="column-main" [formGroup]="forgotpasswordForm" fxFlex="95" (ngSubmit)="onSubmit()">
         <div class="head">
             <h1>
                 <span style="color: #4285f4;">F</span>
@@ -15,11 +15,12 @@
         <div class="email-class">
             <mat-form-field appearance="outline">
                 <mat-label>Phone number or email</mat-label>
-                <input matInput placeholder="">
+                <input matInput formControlName="email" placeholder="">
                 <mat-error>add valid email</mat-error>
             </mat-form-field>
             <div class="below-button">
                 <button class="next-btn" mat-raised-button>Next</button>
             </div>
         </div>
+    </form>
     </div>
