--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -39,13 +39,13 @@
 }
 
 .forgot {
-
     font-family: "Google Sans", "Noto Sans Myanmar UI", arial, sans-serif;
     color: #4285f4;
     border: 0px solid blue;
     font-size: 15px;
-    margin-top: -15px;
-    font-weight: bold
+    font-weight: bold;
+    background-color: white;
+    width: 150px;
 }
 
 .guest {
