[Sushree | Added api integration for login,register and forget password pges]

--- a/src/app/components/forget-password/forget-password.component.html
+++ b/src/app/components/forget-password/forget-password.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="email-class">
             <mat-form-field appearance="outline">
-                <mat-label>Phone number or email</mat-label>
+                <mat-label>Email</mat-label>
                 <input matInput formControlName="email" placeholder="">
                 <mat-error>add valid email</mat-error>
             </mat-form-field>
