--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,7 +10,7 @@
                     <span style="color: #ea4335;">o</span>
                 </h1>
                 <h1>Sign in</h1>
-                <h3>Use your Google Account</h3>
+                <h3>Use your Fundoo Account</h3>
             </div>
             <div class="email-class">
                 <mat-form-field appearance="outline">
