--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <app-register></app-register> -->
 <!-- <app-login></app-login> -->
 <!-- <app-forget-password></app-forget-password> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-dashboard></app-dashboard>
