[Sushree | Added api integration for add note and all all notes]

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<!-- <app-register></app-register> -->
-<!-- <app-login></app-login> -->
-<!-- <app-forget-password></app-forget-password> -->
-<!-- <router-outlet></router-outlet> -->
-<app-dashboard></app-dashboard>
+<router-outlet></router-outlet>
