--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -52,7 +52,7 @@
                     <mat-checkbox>Show Password</mat-checkbox>
                 </div>
                 <div class="below-button">
-                    <button class="sign-btn" mat-stroked-button routerLink="/">Sign in instead</button>
+                    <button class="sign-btn" mat-stroked-button routerLink="/login">Sign in instead</button>
                     <button class="next-btn" mat-raised-button>Next</button>
                 </div>
             </div>
