--- a/src/app/components/dashboard/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard/dashboard.component.scss
@@ -99,6 +99,7 @@ h1.example-app-name {
     margin: 65px;
     margin-left: 105px;
     margin-top: 75px;
+    opacity:0.7;
     border: 0px solid orange;
 }
 
@@ -109,6 +110,7 @@ h1.example-app-name {
 }
 
 .img1 {
+    opacity:0.7;
     width: 27px;
     margin-top: 7px;
 }
