--- a/src/app/components/update-note/update-note.component.scss
+++ b/src/app/components/update-note/update-note.component.scss
@@ -1,24 +1,10 @@
-.note-container{
-    display: flex;
-    flex-direction: column;
-    border: 1px solid white;
-    box-shadow: 1px 1px 3px 3px rgba(157, 167, 170, 0.215);
-    border-radius: 12px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: white;
-    width: 43vw;
-    margin: 35px;
-    margin-left: 470px;
-}
 .title-pinIcon{
     display: flex;
     flex-direction: row;
 }
 .title {
     min-height: 10px;
-    padding-bottom: 30px;
-    padding-left: 15px;
+    padding: 18px;
     font-size: large;
     width: 90%;
     border: none;
@@ -35,8 +21,8 @@
 
   .note-field{
     min-height: 27px;
-    padding-bottom: 0px;
-    padding-left: 15px;
+    padding: 15px;
+    margin-left: 7px;
     height: 2px;
     width: 95%;
     border: none;
@@ -75,7 +61,7 @@
 .closeButton{
     background-color: transparent;
     border: none;
-    margin-left: 250px;
+    margin-left: 300px;
     font-size: 1.2rem;
     font-weight: 500;
     color:  rgba(0,0,0,.87);
