[Sushree | Added fuctionality to add and update color on notes]

--- a/src/app/components/display-notes/display-notes.component.html
+++ b/src/app/components/display-notes/display-notes.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-    <div class="notes" *ngFor='let noteArray of receiveNotes'>
+    <div class="notes" *ngFor='let noteArray of receiveNotes' [style.background]="noteArray.color">
         <div class="title" >
             <p (click)="openDialog(noteArray)">{{noteArray.title}}</p>
         </div>
