--- a/src/app/components/icons/icons.component.scss
+++ b/src/app/components/icons/icons.component.scss
@@ -12,3 +12,21 @@
     margin-left: 14px;
     border: 0px solid blue;
 }
+
+.rangila{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    background-color: white;
+    width: 138px;
+    margin-left: 20px;
+    text-decoration:center;
+    border: 0px solid blue;
+  }
+
+  .rangila button{
+        height: 30px;
+    width: 30px;
+    border-radius: 100px;
+    border: 0.5px solid lightgray;
+  }
