[Sushree | Added Auth Guard functionality]

--- a/src/app/components/dashboard/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard/dashboard.component.html
@@ -26,7 +26,8 @@
         <div>
             <div>
                 <img class="img" src="../../../assets/menu.png">
-                <img class="img1" src="../../../../assets/person.svg">
+
+                <img (click)="Logout()" class="img1" src="../../../../assets/person.svg">
             </div>
         </div>
     </mat-toolbar>
