--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
                 </mat-form-field>
                 <mat-form-field appearance="outline">
                     <mat-label>Password</mat-label>
-                    <input matInput formControlName="password" placeholder="">
+                    <input type="password" matInput formControlName="password" placeholder="">
                     <mat-error>add valid password</mat-error>
                 </mat-form-field>
                 <button class="forgot" routerLink="/forget-pass">Forgot Password?</button>
