--- a/src/app/components/dashboard/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard/dashboard.component.scss
@@ -103,6 +103,12 @@ h1.example-app-name {
     border: 0px solid orange;
 }
 
+.logout{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
 .img {
     width: 25px;
     margin-left: 8px;
