--- a/src/app/components/icons/icons.component.scss
+++ b/src/app/components/icons/icons.component.scss
@@ -13,7 +13,7 @@
     border: 0px solid blue;
 }
 
-.rangila{
+.colorBar{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -24,9 +24,16 @@
     border: 0px solid blue;
   }
 
-  .rangila button{
+  .colorBar button{
         height: 30px;
     width: 30px;
     border-radius: 100px;
     border: 0.5px solid lightgray;
   }
+
+  .trash button{
+    margin-right: 10px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
