[Sushree | Added auto refrsh functionality]

--- a/src/app/components/archive-note/archive-note.component.html
+++ b/src/app/components/archive-note/archive-note.component.html
@@ -1,1 +1,1 @@
-<app-display-notes [receiveNotes]="archivedNoteList"></app-display-notes>
+<app-display-notes [receiveNotes]="archivedNoteList" (noteDisplayEvent)="updateNoteListEvent($event)"></app-display-notes>
