--- a/src/app/components/trash-note/trash-note.component.html
+++ b/src/app/components/trash-note/trash-note.component.html
@@ -1,1 +1,1 @@
-<app-display-notes [receiveNotes]="TrashNotesList"></app-display-notes>
+<app-display-notes [receiveNotes]="TrashNotesList" (noteDisplayEvent)="updateNoteListEvent($event)"></app-display-notes>
