--- a/src/app/components/get-all-notes/get-all-notes.component.html
+++ b/src/app/components/get-all-notes/get-all-notes.component.html
@@ -1,2 +1,2 @@
-<app-create-note> </app-create-note>
-<app-display-notes [receiveNotes] = "NoteList"></app-display-notes>
+<app-create-note (NoteCreationEvent) = "ReceiveEvent($event)"> </app-create-note>
+<app-display-notes [receiveNotes] = "NoteList" (noteDisplayEvent)="ReceiveEvent($event)"></app-display-notes>
