--- a/src/app/components/display-notes/display-notes.component.scss
+++ b/src/app/components/display-notes/display-notes.component.scss
@@ -40,3 +40,11 @@
     align-items: baseline;
     border: 0px solid red;
  }
+
+ .listview{
+    width: 43.4vw;
+    margin: 35px;
+    margin-left: 336px;
+    height: 150px;
+    border-radius: 12px;
+  }
