--- a/src/app/components/dashboard/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard/dashboard.component.scss
@@ -103,6 +103,20 @@ h1.example-app-name {
     border: 0px solid orange;
 }
 
+.listview{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    opacity:0.7;
+}
+
+.gridview{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    opacity:0.7;
+}
+
 .logout{
     border: none;
     background-color: transparent;
