[Sushree | Added error handling using interceptor ]

--- a/src/app/components/dashboard/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard/dashboard.component.html
@@ -27,7 +27,7 @@
                     </button>
 
                     <button *ngIf="grid" class="gridview" >
-                        <img (click)="formatGridView();FormatView()" class="img" src="../../../assets/view.png">
+                        <img (click)="formatGridView();FormatView()" class="img" src="../../../../assets/Grid View.png">
                     </button>
                 <img class="img" src="../../../assets/settingicon.png">
             </div>
