--- a/src/app/components/display-notes/display-notes.component.html
+++ b/src/app/components/display-notes/display-notes.component.html
@@ -3,7 +3,7 @@
         <div class="title" >
             <p (click)="openDialog(noteArray)">{{noteArray.title}}</p>
         </div>
-        <div class="descriptiodata">
+        <div class="descriptiondata">
             <p (click)="openDialog(noteArray)" >{{noteArray.description}}</p>
         </div>
         <div class="note-icons">
